* Fix: Global vs Form Payment Gateways https://github.com/WordImpress/Give/issues/86 * Fix: Setting Section Title Not Displaying Proper Text https://github.com/WordImpress/Give/issues/87 * Fix: Prefixed "icon" and "icon-question" classes to mitigate conflicts: https://github.com/WordImpress/Give/issues/103 * Fix: {name} isn't correctly rendered in test email: https://github.com/WordImpress/Give/issues/100 - Thanks @sumobi * Fix: When exporting a report, apostrophe's are not correctly shown: https://github.com/WordImpress/Give/issues/96 - Thanks @sumobi * Fix: PHP warning when exporting PDF: https://github.com/WordImpress/Give/issues/93 - Thanks @sumobi * Fix: Property of non-object on Forms Report: https://github.com/WordImpress/Give/issues/91 - Thanks @pippinsplugins * Fix: PHP Notice: Undefined variable: unlimited: https://github.com/WordImpress/Give/issues/89 - Thanks @sumobi * Fix: Prefix .icon class to prevent conflicts #103: https://github.com/WordImpress/Give/issues/103 - Thanks @stevengliebe * Update: Removed unnecessary contextual help files until we decide how we are going to approach this with the plugin * Update: Inline code comments improved to be more specific to Give - some were incorrectly describing old EDD functionality * Security: Hardened URLs with esc_url() across the plugin core
git-svn-id: https://plugins.svn.wordpress.org/give/trunk@1139293 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/scss/admin/settings.scss
+++ b/assets/scss/admin/settings.scss
@@ -38,7 +38,7 @@ Settings
 
 /* Section Titles */
 
-.cmb-type-title h3 {
+.cmb-type-give-title label {
   float: left;
   width: 220px;
   font-style: italic;
