--- a/assets/css/give-admin.css
+++ b/assets/css/give-admin.css
@@ -110,6 +110,8 @@
   direction: ltr; }
 
 .qtip-icon, .qtip-icon .ui-icon {
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   text-decoration: none; }
 
@@ -144,24 +146,36 @@
   color: #111; }
 
 .qtip-shadow {
+  -webkit-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
   box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15); }
 
 /* Add rounded corners to your tooltips in: FF3+, Chrome 2+, Opera 10.6+, IE9+, Safari 2+ */
 .qtip-rounded, .qtip-tipsy, .qtip-bootstrap {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
   border-radius: 5px; }
 
 .qtip-rounded .qtip-titlebar {
+  -moz-border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px 4px 0 0;
   border-radius: 4px 4px 0 0; }
 
 /* Youtube tooltip style */
 .qtip-youtube {
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
   border-radius: 2px;
+  -webkit-box-shadow: 0 0 3px #333;
+  -moz-box-shadow: 0 0 3px #333;
   box-shadow: 0 0 3px #333;
   color: white;
   border: 0 solid transparent;
   background: #4A4A4A;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #4A4A4A), color-stop(100%, black));
   background-image: -webkit-linear-gradient(top, #4A4A4A 0, black 100%);
+  background-image: -moz-linear-gradient(top, #4A4A4A 0, black 100%);
+  background-image: -ms-linear-gradient(top, #4A4A4A 0, black 100%);
   background-image: -o-linear-gradient(top, #4A4A4A 0, black 100%); }
 
 .qtip-youtube .qtip-titlebar {
@@ -185,11 +199,17 @@
   background: #232323;
   background: rgba(0, 0, 0, 0.7);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#717171), to(#232323));
+  background-image: -moz-linear-gradient(top, #717171, #232323);
   background-image: -webkit-linear-gradient(top, #717171, #232323);
+  background-image: -ms-linear-gradient(top, #717171, #232323);
   background-image: -o-linear-gradient(top, #717171, #232323);
   border: 2px solid #ddd;
   border: 2px solid #f1f1f1;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
   border-radius: 2px;
+  -webkit-box-shadow: 0 0 12px #333;
+  -moz-box-shadow: 0 0 12px #333;
   box-shadow: 0 0 12px #333; }
 
 /* IE Specific */
@@ -215,6 +235,8 @@
 
 /* Cluetip style */
 .qtip-cluetip {
+  -webkit-box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
   box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
   background-color: #D9D9C2;
   color: #111;
@@ -261,6 +283,8 @@
 /* Tipped style */
 .qtip-tipped {
   border: 3px solid #959FA9;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   background-color: #F9F9F9;
   color: #454545;
@@ -273,6 +297,8 @@
   background: #3A79B8;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#3A79B8), to(#2E629D));
   background-image: -webkit-linear-gradient(top, #3A79B8, #2E629D);
+  background-image: -moz-linear-gradient(top, #3A79B8, #2E629D);
+  background-image: -ms-linear-gradient(top, #3A79B8, #2E629D);
   background-image: -o-linear-gradient(top, #3A79B8, #2E629D);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#3A79B8,endColorstr=#2E629D);
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#3A79B8,endColorstr=#2E629D)"; }
@@ -301,8 +327,14 @@
   background-color: #ffffff;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
   border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
   background-clip: padding-box; }
 
 .qtip-bootstrap .qtip-titlebar {
@@ -314,6 +346,8 @@
   line-height: 18px;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0; }
 
 .qtip-bootstrap .qtip-titlebar .qtip-close {
@@ -376,8 +410,7 @@
 
 /* IE9 fix - removes all filters */
 .qtip:not(.ie9haxors) div.qtip-content, .qtip:not(.ie9haxors) div.qtip-titlebar {
-  -webkit-filter: none;
-          filter: none;
+  filter: none;
   -ms-filter: none; }
 
 .qtip .qtip-tip {
@@ -421,7 +454,7 @@ x:-o-prefocus, .qtip .qtip-tip {
   font-weight: normal;
   font-style: normal; }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="give-icon-"], [class*=" give-icon-"] {
   font-family: 'give-icomoon';
   speak: none;
   font-style: normal;
@@ -433,25 +466,25 @@ x:-o-prefocus, .qtip .qtip-tip {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-.icon-lamp:before {
+.give-icon-lamp:before {
   content: "\e603"; }
 
-.icon-heart:before {
+.give-icon-heart:before {
   content: "\e604"; }
 
-.icon-question:before {
+.give-icon-question:before {
   content: "\e602"; }
 
-.icon-info:before {
+.give-icon-info:before {
   content: "\e601"; }
 
-.icon-new-tab:before {
+.give-icon-new-tab:before {
   content: "\ea7e"; }
 
-.icon-alert:before {
+.give-icon-alert:before {
   content: "\f02d"; }
 
-.icon-help:before {
+.give-icon-help:before {
   content: "\e606"; }
 
 /**
@@ -672,6 +705,7 @@ ASIDE
   min-height: 365px;
   overflow: hidden;
   background: #f5f5f5;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -webkit-transition-property: border, background, color;
   transition-property: border, background, color;
@@ -756,10 +790,20 @@ ASIDE
 
 body.give_forms_page_give-reports h2.nav-tab-wrapper, body.give_forms_page_give-payment-history h2.nav-tab-wrapper {
   margin-bottom: 10px; }
-body.give_forms_page_give-reports .tablenav, body.give_forms_page_give-payment-history .tablenav {
-  clear: none;
-  float: left;
-  margin: 0 0 10px; }
+body.give_forms_page_give-reports .actions, body.give_forms_page_give-payment-history .actions {
+  padding-top: 0; }
+body.give_forms_page_give-reports .pagination-links, body.give_forms_page_give-payment-history .pagination-links {
+  margin-left: 10px; }
+body.give_forms_page_give-reports p.donor-search, body.give_forms_page_give-payment-history p.donor-search {
+  margin-right: 10px; }
+body.give_forms_page_give-reports .tablenav-right .tablenav-pages, body.give_forms_page_give-payment-history .tablenav-right .tablenav-pages {
+  float: right; }
+body.give_forms_page_give-reports .tablenav-right #give-reports-view, body.give_forms_page_give-payment-history .tablenav-right #give-reports-view {
+  margin-top: 0; }
+body.give_forms_page_give-reports .tablenav-right .actions, body.give_forms_page_give-payment-history .tablenav-right .actions {
+  float: left; }
+body.give_forms_page_give-reports p.search-box, body.give_forms_page_give-payment-history p.search-box {
+  float: left; }
 body.give_forms_page_give-reports .reports-table-nav.tablenav.top, body.give_forms_page_give-payment-history .reports-table-nav.tablenav.top {
   width: 100%;
   float: none;
@@ -789,6 +833,12 @@ Export Options Styles
 ---------------------------*/
 body.give_forms_page_give-reports table.export-options-table tbody td {
   padding: 20px 12px; }
+
+/*---------------------
+Payment Methods
+---------------------------*/
+.gateways-report-tablenav .actions.bulkactions {
+  padding-right: 0; }
 
 /*---------------------
 Table List Styles
@@ -857,6 +907,7 @@ table.give-table td.row-title p {
     padding: 3px; }
   .give-newsletter-form-wrap div.give-newsletter-confirmation {
     background: #fff;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     margin: 5px 10px 4px 5px;
     padding: 1px 12px;
@@ -902,7 +953,7 @@ Settings
   cursor: default; }
 
 /* Section Titles */
-.cmb-type-title h3 {
+.cmb-type-give-title label {
   float: left;
   width: 220px;
   font-style: italic;
@@ -1302,3 +1353,5 @@ Responsiveness
 #give_dashboard_sales .give-table-stats tr#give-table-stats-tr-1 td {
   border-bottom: 1px solid #ececec; }
 
+
+/*# sourceMappingURL=give-admin.css.map */
