--- a/assets/scss/admin/reports.scss
+++ b/assets/scss/admin/reports.scss
@@ -70,11 +70,34 @@ body.give_forms_page_give-reports, body.give_forms_page_give-payment-history {
   h2.nav-tab-wrapper {
 	margin-bottom: 10px;
   }
+  .actions {
+	padding-top: 0;
+  }
 
-  .tablenav {
-	clear: none;
+  .pagination-links {
+	margin-left: 10px;
+  }
+
+  p.donor-search {
+	margin-right: 10px;
+  }
+
+  .tablenav-right {
+
+	.tablenav-pages {
+	  float: right;
+	}
+	#give-reports-view {
+	  margin-top: 0;
+	}
+	.actions {
+	  float: left;
+	}
+
+  }
+
+  p.search-box {
 	float: left;
-	margin: 0 0 10px;
   }
 
   .reports-table-nav.tablenav.top {
@@ -126,6 +149,16 @@ Export Options Styles
 body.give_forms_page_give-reports table.export-options-table {
   tbody td {
 	padding: 20px 12px;
+  }
+}
+
+/*---------------------
+Payment Methods
+---------------------------*/
+
+.gateways-report-tablenav {
+  .actions.bulkactions {
+	padding-right: 0;
   }
 }
 
