--- a/assets/css/give-admin.css
+++ b/assets/css/give-admin.css
@@ -503,11 +503,6 @@ Forms CPT
   display: none; }
 
 /* Donation Levels Repeating Field */
-#_give_donation_levels_repeat {
-  margin: 0 0 20px; }
-  #_give_donation_levels_repeat .cmb-row, #_give_donation_levels_repeat .inside {
-    margin: 0; }
-
 #_give_donation_levels_repeat > .cmb-repeatable-grouping .cmb-field-list > .cmb-row .cmb2-radio-list label {
   font-size: 12px; }
 
@@ -515,42 +510,72 @@ Forms CPT
   display: none; }
 
 /* Table Rows */
-div.cmb-type-levels-repeater-header {
-  padding: 10px 1px 0 0 !important;
-  margin: 0 !important; }
-
 div.cmb-type-levels-repeater-header + div.cmb-repeat-group-wrap {
   padding: 0 !important;
   margin: 0 !important;
   min-width: 100%;
   max-width: 0; }
 
-.cmb2-id--give-levels-header .table-container {
-  display: table;
-  width: 100%;
-  border-top: 1px solid #e9e9e9;
-  border-left: 1px solid #e9e9e9; }
-  .cmb2-id--give-levels-header .table-container > .table-row {
-    display: table-row;
-    background: #FCFCFC; }
-    .cmb2-id--give-levels-header .table-container > .table-row > .table-cell {
-      display: table-cell;
-      vertical-align: middle;
-      padding: 10px 15px;
-      border-right: 1px solid #e9e9e9; }
+.cmb2-id--give-levels-header {
+  padding: 10px 12px 0 !important;
+  margin: 0 !important;
+  background: #F7F7F7;
+  border-bottom: none !important; }
+  .cmb2-id--give-levels-header .table-container {
+    display: table;
+    width: 100%;
+    border-top: 1px solid #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
+    border-left: 1px solid #e9e9e9; }
+    .cmb2-id--give-levels-header .table-container > .table-row {
+      display: table-row;
+      background: #FCFCFC; }
+      .cmb2-id--give-levels-header .table-container > .table-row > .table-cell {
+        display: table-cell;
+        vertical-align: middle;
+        padding: 10px 15px;
+        border-right: 1px solid #e9e9e9; }
 
-#_give_donation_levels_repeat .cmb-remove-field-row {
-  margin: 3px 0 0; }
-  #_give_donation_levels_repeat .cmb-remove-field-row .button {
-    height: 25px;
-    padding: 0 3px; }
-  #_give_donation_levels_repeat .cmb-remove-field-row span.dashicons-no {
-    line-height: 1.15em; }
-#_give_donation_levels_repeat .cmbhandle {
-  display: none; }
+#_give_donation_levels_repeat {
+  background: #F7F7F7;
+  padding: 0 12px 20px;
+  box-sizing: border-box; }
+  #_give_donation_levels_repeat .cmb-row, #_give_donation_levels_repeat .inside {
+    margin: 0; }
+  #_give_donation_levels_repeat .cmb-remove-field-row {
+    margin: 3px 0 0; }
+    #_give_donation_levels_repeat .cmb-remove-field-row .button {
+      height: 25px;
+      padding: 0 3px; }
+    #_give_donation_levels_repeat .cmb-remove-field-row span.dashicons-no {
+      line-height: 1.15em; }
+  #_give_donation_levels_repeat .cmbhandle {
+    display: none; }
+  #_give_donation_levels_repeat .cmb-add-row {
+    margin: 12px 0 0; }
 
 .give-time-field {
   width: 65px; }
+
+.give-money-field {
+  width: 75px;
+  margin-right: 0;
+  margin-left: 0; }
+
+.give-money-symbol {
+  border: 1px solid #e9e9e9;
+  background: #FCFCFC;
+  margin: 0;
+  font-size: 14px;
+  padding: 5px 8px; }
+
+.give-money-symbol-before {
+  border-right: 0;
+  position: relative;
+  right: -1px; }
+
+.give-money-symbol-after {
+  border-left: 0; }
 
 p.give-level-id {
   border-radius: 50%;
@@ -558,6 +583,19 @@ p.give-level-id {
   background: #FCFCFC;
   padding: 2px 7px;
   font-size: 11px; }
+
+#poststuff .give-subfield {
+  background: #FAFAFA; }
+  #poststuff .give-subfield .cmb-th label {
+    padding-left: 16px; }
+  #poststuff .give-subfield .cmb-td {
+    padding-right: 10px;
+    box-sizing: border-box; }
+
+.postbox-container .cmb-row {
+  margin: 0; }
+  .postbox-container .cmb-row .cmb-th label {
+    padding-left: 8px; }
 
 /* Smaller Resolution Desktops AND UP */
 @media only screen and (min-width: 851px) {
@@ -670,11 +708,11 @@ Publish Metabox
 /*-------------------------------------
 Content Options
 -------------------------------------*/
-.cmb2-id--give-content-option, .cmb2-id--give-terms-option, .cmb2-id--give-custom-amount, .cmb2-id--give-offline-donation-enable-billing-fields-single {
+.cmb2-id--give-content-option, .cmb2-id--give-terms-option, .cmb2-id--give-offline-donation-enable-billing-fields-single, .cmb2-id--give-goal-option, .cmb2-id--give-customize-offline-donations {
   border-bottom: none !important;
   margin: 0 !important; }
 
-.cmb2-id--give-form-content, .cmb2-id--give-agree-label, .cmb2-id--give-custom-amount-text, .cmb2-id--give-offline-checkout-notes {
+.cmb2-id--give-form-content, .cmb2-id--give-agree-label, .cmb2-id--give-offline-checkout-notes, .cmb2-id--give-set-goal, .cmb2-id--give-offline-donation-enable-billing-fields-single {
   border-top: 1px solid #e9e9e9 !important; }
 
 /*-------------------------------------
@@ -880,6 +918,16 @@ table.give-table td.row-title p {
   font-weight: normal;
   color: #aaa;
   margin: 0; }
+
+/*-------------------------
+Logs
+----------------------------*/
+#give-logs-filter .search-box {
+  float: right; }
+#give-logs-filter .tablenav.top {
+  float: left;
+  clear: none;
+  margin-top: 0; }
 
 /**
  * Give Admin Welcome SCSS
