--- a/templates/give.css
+++ b/templates/give.css
@@ -623,11 +623,11 @@ Gravatar List
 /*------------------------------------
 Base Form Styles
 --------------------------------------*/
-form[id*='give-form'] {
+form[id*='give-form'], #give-recurring-form, form.give-form {
   color: #333;
   margin: 0 0 25px;
   padding: 0; }
-  form[id*='give-form'] .give-tooltip {
+  form[id*='give-form'] .give-tooltip, #give-recurring-form .give-tooltip, form.give-form .give-tooltip {
     margin: 0 3px;
     padding: 0;
     font-size: 14px;
@@ -635,37 +635,37 @@ form[id*='give-form'] {
     -o-transition: 0.2s all linear;
     transition: 0.2s all linear;
     color: rgba(51, 51, 51, 0.5); }
-    form[id*='give-form'] .give-tooltip:hover {
+    form[id*='give-form'] .give-tooltip:hover, #give-recurring-form .give-tooltip:hover, form.give-form .give-tooltip:hover {
       color: #333; }
-  form[id*='give-form'] legend {
+  form[id*='give-form'] legend, #give-recurring-form legend, form.give-form legend {
     font-weight: bold;
     margin: 10px 0 15px;
     padding: 0 0 10px;
     border-bottom: 1px solid #EDEDED;
     width: 100%; }
-    form[id*='give-form'] legend span.sub-text {
+    form[id*='give-form'] legend span.sub-text, #give-recurring-form legend span.sub-text, form.give-form legend span.sub-text {
       font-style: italic;
       font-weight: normal; }
-  form[id*='give-form'] .form-row {
+  form[id*='give-form'] .form-row, #give-recurring-form .form-row, form.give-form .form-row {
     *zoom: 1;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0 0 15px;
     padding: 0; }
-    form[id*='give-form'] .form-row:before, form[id*='give-form'] .form-row:after {
+    form[id*='give-form'] .form-row:before, form[id*='give-form'] .form-row:after, #give-recurring-form .form-row:before, #give-recurring-form .form-row:after, form.give-form .form-row:before, form.give-form .form-row:after {
       content: " ";
       display: table; }
-    form[id*='give-form'] .form-row:after {
+    form[id*='give-form'] .form-row:after, #give-recurring-form .form-row:after, form.give-form .form-row:after {
       clear: both; }
-    form[id*='give-form'] .form-row label {
+    form[id*='give-form'] .form-row label, #give-recurring-form .form-row label, form.give-form .form-row label {
       display: block;
       margin: 0 0 5px;
       position: relative;
       line-height: 1.7; }
-      form[id*='give-form'] .form-row label.checkbox {
+      form[id*='give-form'] .form-row label.checkbox, #give-recurring-form .form-row label.checkbox, form.give-form .form-row label.checkbox {
         display: inline; }
-    form[id*='give-form'] .form-row select, form[id*='give-form'] .form-row textarea, form[id*='give-form'] .form-row input[type="text"], form[id*='give-form'] .form-row input[type="email"], form[id*='give-form'] .form-row input[type="password"] {
+    form[id*='give-form'] .form-row select, form[id*='give-form'] .form-row textarea, form[id*='give-form'] .form-row input[type="text"], form[id*='give-form'] .form-row input[type="email"], form[id*='give-form'] .form-row input[type="password"], #give-recurring-form .form-row select, #give-recurring-form .form-row textarea, #give-recurring-form .form-row input[type="text"], #give-recurring-form .form-row input[type="email"], #give-recurring-form .form-row input[type="password"], form.give-form .form-row select, form.give-form .form-row textarea, form.give-form .form-row input[type="text"], form.give-form .form-row input[type="email"], form.give-form .form-row input[type="password"] {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
@@ -673,42 +673,42 @@ form[id*='give-form'] {
       border-radius: 0;
       outline: none;
       color: #333; }
-      form[id*='give-form'] .form-row select.required, form[id*='give-form'] .form-row textarea.required, form[id*='give-form'] .form-row input[type="text"].required, form[id*='give-form'] .form-row input[type="email"].required, form[id*='give-form'] .form-row input[type="password"].required {
+      form[id*='give-form'] .form-row select.required, form[id*='give-form'] .form-row textarea.required, form[id*='give-form'] .form-row input[type="text"].required, form[id*='give-form'] .form-row input[type="email"].required, form[id*='give-form'] .form-row input[type="password"].required, #give-recurring-form .form-row select.required, #give-recurring-form .form-row textarea.required, #give-recurring-form .form-row input[type="text"].required, #give-recurring-form .form-row input[type="email"].required, #give-recurring-form .form-row input[type="password"].required, form.give-form .form-row select.required, form.give-form .form-row textarea.required, form.give-form .form-row input[type="text"].required, form.give-form .form-row input[type="email"].required, form.give-form .form-row input[type="password"].required {
         color: #333; }
-  form[id*='give-form'] .form-row-first, form[id*='give-form'] .form-row-last, form[id*='give-form'] .form-row-two-thirds {
+  form[id*='give-form'] .form-row-first, form[id*='give-form'] .form-row-last, form[id*='give-form'] .form-row-two-thirds, #give-recurring-form .form-row-first, #give-recurring-form .form-row-last, #give-recurring-form .form-row-two-thirds, form.give-form .form-row-first, form.give-form .form-row-last, form.give-form .form-row-two-thirds {
     float: left;
     width: 48.5%;
     overflow: visible; }
-  form[id*='give-form'] .form-row-two-thirds {
+  form[id*='give-form'] .form-row-two-thirds, #give-recurring-form .form-row-two-thirds, form.give-form .form-row-two-thirds {
     float: left;
     width: 65.75%; }
-    form[id*='give-form'] .form-row-two-thirds.form-row-first {
+    form[id*='give-form'] .form-row-two-thirds.form-row-first, #give-recurring-form .form-row-two-thirds.form-row-first, form.give-form .form-row-two-thirds.form-row-first {
       margin-left: 0; }
-  form[id*='give-form'] .form-row-one-third {
+  form[id*='give-form'] .form-row-one-third, #give-recurring-form .form-row-one-third, form.give-form .form-row-one-third {
     float: left;
     width: 31.25%;
     margin-left: 3%; }
-    form[id*='give-form'] .form-row-one-third.form-row-first {
+    form[id*='give-form'] .form-row-one-third.form-row-first, #give-recurring-form .form-row-one-third.form-row-first, form.give-form .form-row-one-third.form-row-first {
       margin-left: 0; }
-  form[id*='give-form'] .form-row-last {
+  form[id*='give-form'] .form-row-last, #give-recurring-form .form-row-last, form.give-form .form-row-last {
     float: right; }
-  form[id*='give-form'] .form-row-wide {
+  form[id*='give-form'] .form-row-wide, #give-recurring-form .form-row-wide, form.give-form .form-row-wide {
     *zoom: 1;
     clear: both; }
-    form[id*='give-form'] .form-row-wide:before, form[id*='give-form'] .form-row-wide:after {
+    form[id*='give-form'] .form-row-wide:before, form[id*='give-form'] .form-row-wide:after, #give-recurring-form .form-row-wide:before, #give-recurring-form .form-row-wide:after, form.give-form .form-row-wide:before, form.give-form .form-row-wide:after {
       content: " ";
       display: table; }
-    form[id*='give-form'] .form-row-wide:after {
+    form[id*='give-form'] .form-row-wide:after, #give-recurring-form .form-row-wide:after, form.give-form .form-row-wide:after {
       clear: both; }
-  form[id*='give-form'] .give-required-indicator {
+  form[id*='give-form'] .give-required-indicator, #give-recurring-form .give-required-indicator, form.give-form .give-required-indicator {
     color: #a00; }
-  form[id*='give-form'] .card-expiration > select {
+  form[id*='give-form'] .card-expiration > select, #give-recurring-form .card-expiration > select, form.give-form .card-expiration > select {
     width: 44%;
     margin: 0; }
-  form[id*='give-form'] .card-expiration > span.exp-divider {
+  form[id*='give-form'] .card-expiration > span.exp-divider, #give-recurring-form .card-expiration > span.exp-divider, form.give-form .card-expiration > span.exp-divider {
     display: inline;
     text-align: center; }
-  form[id*='give-form'] .card-expiration select.card-expiry-year {
+  form[id*='give-form'] .card-expiration select.card-expiry-year, #give-recurring-form .card-expiration select.card-expiry-year, form.give-form .card-expiration select.card-expiry-year {
     float: right; }
 
 /*---------------------------------
@@ -802,7 +802,7 @@ form[id*='give-form'] #give-final-total-wrap {
 /*---------------------------------
 Notices, Warnings & Errors
 -----------------------------------*/
-.give_error {
+.give_error, .give_success {
   position: relative;
   margin: 15px 0;
   background: #F9F9F9;
@@ -810,9 +810,9 @@ Notices, Warnings & Errors
   border-left: 4px solid #a00;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
   clear: both; }
-  .give_error > p {
+  .give_error > p, .give_success > p {
     margin: 0 !important; }
-  .give_error:before {
+  .give_error:before, .give_success:before {
     font-family: 'give-icomoon';
     speak: none;
     font-style: normal;
@@ -836,6 +836,18 @@ Notices, Warnings & Errors
     line-height: 30px;
     text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
     content: '\f02d'; }
+  .give_error.give_warning, .give_success.give_warning {
+    border-color: #ffba00; }
+    .give_error.give_warning:before, .give_success.give_warning:before {
+      background-color: #ffba00;
+      text-shadow: 1px 1px rgba(0, 0, 0, 0.1); }
+
+.give_success {
+  border-color: #7ad03a; }
+  .give_success:before {
+    background-color: #7ad03a;
+    content: '\e601';
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.2); }
 
 /*---------------------------------
 Radio Lists
@@ -1000,6 +1012,12 @@ form[id*='give-form'] .give-loading-animation {
   background-size: 20px 20px;
   background-repeat: no-repeat;
   background-color: transparent; }
+form[id*='give-form'] span.padlock:before {
+  content: '\e600';
+  display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  font: normal 20px/1 'dashicons';
+  vertical-align: top; }
 
 /* Login and Register */
 #give-login-account-wrap {
@@ -1051,7 +1069,7 @@ Responsiveness
     width: 46%; } }
 
 /* Magnific Popup CSS */
-.mfp-bg {
+.give-modal.mfp-bg {
   top: 0;
   left: 0;
   width: 100%;
@@ -1063,7 +1081,7 @@ Responsiveness
   opacity: 0.8;
   filter: alpha(opacity=80); }
 
-.mfp-wrap {
+.give-modal {
   top: 0;
   left: 0;
   width: 100%;
@@ -1072,72 +1090,65 @@ Responsiveness
   position: fixed;
   outline: none !important;
   -webkit-backface-visibility: hidden; }
-
-.mfp-container {
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  padding: 0 8px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.mfp-container:before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle; }
-
-.mfp-align-top .mfp-container:before {
-  display: none; }
-
-.mfp-content {
-  display: inline-block;
-  vertical-align: middle;
-  text-align: left;
-  position: relative;
-  background: #FFF;
-  padding: 20px;
-  width: auto;
-  max-width: 500px;
-  margin: 40px auto;
-  z-index: 1045; }
-  .mfp-content .give-donation-levels-wrap, .mfp-content .give-btn-modal {
+  .give-modal form[id*='give-form'] {
+    margin-bottom: 0; }
+    .give-modal form[id*='give-form'] .give-submit {
+      margin-bottom: 0; }
+  .give-modal .mfp-container {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    padding: 0 8px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+  .give-modal .mfp-container:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+  .give-modal .mfp-align-top .mfp-container:before {
     display: none; }
-  .mfp-content [id*='give-form'] #give-payment-mode-select, .mfp-content [id*='give-form'] #give_purchase_form_wrap {
-    display: block; }
-
-.mfp-inline-holder .mfp-content, .mfp-ajax-holder .mfp-content {
-  width: 100%;
-  cursor: auto; }
-
-.mfp-ajax-cur {
-  cursor: progress; }
-
-.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
-  cursor: -moz-zoom-out;
-  cursor: -webkit-zoom-out;
-  cursor: zoom-out; }
-
-.mfp-zoom {
-  cursor: pointer;
-  cursor: -webkit-zoom-in;
-  cursor: -moz-zoom-in;
-  cursor: zoom-in; }
-
-.mfp-auto-cursor .mfp-content {
-  cursor: auto; }
-
-.mfp-close, .mfp-arrow, .mfp-preloader, .mfp-counter {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none; }
-
-.mfp-loading.mfp-figure {
-  display: none; }
+  .give-modal .mfp-content {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    position: relative;
+    background: #FFF;
+    padding: 20px;
+    width: auto;
+    max-width: 500px;
+    margin: 40px auto;
+    z-index: 1045; }
+    .give-modal .mfp-content .give-donation-levels-wrap, .give-modal .mfp-content .give-btn-modal {
+      display: none; }
+    .give-modal .mfp-content [id*='give-form'] #give-payment-mode-select, .give-modal .mfp-content [id*='give-form'] #give_purchase_form_wrap {
+      display: block; }
+  .give-modal .mfp-inline-holder .mfp-content, .give-modal .mfp-ajax-holder .mfp-content {
+    width: 100%;
+    cursor: auto; }
+  .give-modal .mfp-ajax-cur {
+    cursor: progress; }
+  .give-modal .mfp-zoom-out-cur, .give-modal .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+    cursor: -moz-zoom-out;
+    cursor: -webkit-zoom-out;
+    cursor: zoom-out; }
+  .give-modal .mfp-zoom {
+    cursor: pointer;
+    cursor: -webkit-zoom-in;
+    cursor: -moz-zoom-in;
+    cursor: zoom-in; }
+  .give-modal .mfp-auto-cursor .mfp-content {
+    cursor: auto; }
+  .give-modal .mfp-close, .give-modal .mfp-arrow, .give-modal .mfp-preloader, .give-modal .mfp-counter {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none; }
+  .give-modal .mfp-loading.mfp-figure {
+    display: none; }
 
 .mfp-hide {
   display: none !important; }
@@ -1513,6 +1524,41 @@ Avada
 ------------------------------------------------*/
 .avada-row > div.give-wrap #content {
   width: 100%; }
+
+/**
+ * Give Frontend Progress Bar SCSS
+ *
+ * @package     Give
+ * @subpackage  SCSS/Frontend
+ * @copyright   Copyright (c) 2015, WordImpress
+ * @license     http://opensource.org/licenses/gpl-2.0.php GNU Public License
+*/
+.goal-progress {
+  margin-bottom: 20px; }
+  .goal-progress .income {
+    font-size: 46px;
+    line-height: 48px;
+    letter-spacing: -1px;
+    color: #333; }
+  .goal-progress .raised {
+    margin-bottom: 15px; }
+
+.progress-bar {
+  height: 20px;
+  /* Can be anything */
+  position: relative;
+  background: #EEE;
+  border-radius: 25px; }
+  .progress-bar > span {
+    display: block;
+    height: 100%;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: #2bc253;
+    position: relative;
+    overflow: hidden; }
 
 
 /*# sourceMappingURL=give.css.map */
