= 1.1 = * New: A front-facing JSON/XML API that makes it possible to query donation data directly from your WordPress site; this corresponds with the Zapier Add-on for Give: http://givewp.com/addons/zapier/ * New: Added warning to frontend donation forms when test mode is enabled * Improvement: PalPal Standard now displays the multi-level text within PayPal @see: https://github.com/WordImpress/Give/issues/164 * Tweak: Moved the "Test Mode" option out from General Settings to Payment Gateways > Gateway Settings from better visibility * Tweak: Removed "Cancelled" and "Pre-Approved" payment statuses; "Failed" and "Pending" statuses should be used in their place. * Fix: Ensure CMB2 loads text domain properly @see: https://github.com/WebDevStudios/CMB2/issues/400
git-svn-id: https://plugins.svn.wordpress.org/give/trunk@1204175 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/scss/admin/settings.scss
+++ b/assets/scss/admin/settings.scss
@@ -104,6 +104,60 @@ Settings
   margin: 0;
 }
 
+/* API
+-------------------------------------------------------------- */
+
+.cmb2-id-api {
+
+  .cmb-td {
+	padding: 0;
+  }
+  table th {
+	padding: 10px 8px;
+  }
+
+  .give-ajax-user-search {
+	padding: 3px 5px;
+
+  }
+
+}
+
+.give_user_search_wrap {
+  position: relative;
+  overflow: visible;
+}
+
+.give_user_search_results {
+  position: absolute;
+  left: 0;
+  top: 27px;
+
+  a.give-ajax-user-cancel {
+	position: absolute;
+	right: 6px;
+	top: 2px;
+  }
+  ul {
+	padding: 10px 10px 4px;
+	margin: 0;
+	background: #f0f0f0;
+	border: 1px solid #DFDFDF;
+	width: 300px;
+	max-height: 200px;
+	overflow-y: scroll;
+  }
+
+}
+
+.give_forms_page_give-settings .tablenav .actions {
+  overflow: visible;
+}
+
+a.give-delete {
+  color: #a00;
+}
+
 /* License
 -------------------------------------------------------------- */
 .cmb2-wrap {
@@ -114,19 +168,18 @@ Settings
 
   .give-license-field {
 	background-image: url('../images/close.png');
-	background-color:#FFF;
-	background-repeat:no-repeat;
+	background-color: #FFF;
+	background-repeat: no-repeat;
 	background-position: 98.5% center;
 	background-size: 18px;
   }
 
-
   .give-license-active, .give-license-active:focus {
 	background-image: url('../images/tick.png');
-	background-color:#FFF;
-	background-repeat:no-repeat;
+	background-color: #FFF;
+	background-repeat: no-repeat;
 	background-position: 98.5% center;
-	outline:none;
+	outline: none;
 	background-size: 16px;
   }
 
